# ChessEngines

./: .gitignore  CMakeLists.txt  ChessEngines.sln  NEW_README.md  README.md  build_and_run.sh  run.bat  run.sh
.github/workflows/: cmake-multi-platform.yml
ChessEngines/: Board.cpp  Board.h  BotFeaster.cpp  BotFeaster.h  ChessEngines.vcxproj  ChessEngines.vcxproj.filters  DrunkEngine.cpp  DrunkEngine.h  Engine.h  EngineHelpers.cpp  EngineHelpers.h  GameBoard.cpp  GameBoard.h  HippieEngine.cpp  HippieEngine.h  MinMaxEngine.cpp  MinMaxEngine.h  MinMaxNoPruning.cpp  Piece.cpp  Piece.h  RandomEngine.cpp  RandomEngine.h  SimpleEngines.cpp  SimpleEngines.h  Ui.cpp  Ui.h  log.txt  main.cpp
Interesting files/: Benchmarks.txt
src/: Board.cpp  ChessEngines.vcxproj  Engine.h  GameBoard.cpp  GameBoard.h  MinMaxEngine.cpp  MinMaxEngine.h  MinMaxNoPruning.cpp  MinMaxNoPruning.h  SimpleEngines.h  log.txt  main.cpp
